--- a/src/index.ejs
+++ b/src/index.ejs
@@ -36,7 +36,7 @@
                 <select id="refresh_period">
               <option value="10">10 ms</option>
               <option value="100">100 ms</option>
-              <option value="1000">1 second</option>
+              <option value="1000" selected>1 second</option>
               <option value="5000">5 second</option>
               <option value="10000">10 second</option>
               <option value="15000">15 second</option>
